--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         <!-- navbar end-->
 
         <!-- first-page-txt-and-image -->
-        <div class="row text-white align-items-center bleak-background-color p-3  first-page justify-content-around px-5 gy-5 my-5">
-            <div class="col-md-8">
-                <span class="i-am">I AM BLEAK PEAKER
+        <div class="row text-white align-items-center bleak-background-color p-3  first-page justify-content-around px-5 gy-5 my-5 HHH">
+            <div class="col-md-8 ">
+                <span class="i-am HHH">I AM NAJMUS SHAKIN
                 </span>
-                <h1 class=" header-title my-4">Graphic Designer</h1>
-                <button class="fw-bold text-white contact-me-btn">Contact Me <i class="fas fa-caret-right ps-2"></i></button>
+                <h1 class=" header-title mb-3 HHH">Graphic Designer</h1>
+                <button class="fw-bold text-white contact-me-btn HHH">Contact Me <i class="fas fa-caret-right ps-2"></i></button>
             </div>
             <div class="col-md-4  text-end intro-image">
                 <img class="img-fluid rounded-circle p-1" src="img/pr.jpg" alt="" ">
@@ -237,7 +237,7 @@
                                 <a href="#Features ">Privacy Policy</a>
                             </p>
                         </div>
-                        <a href=" ">© 2020 bike. All rights reserved</a>
+                        <a href=" ">© 2020. All rights reserved</a>
                     </div>
                     <div class="col-md-4 pb-5 px-5 ">
                        
